updated html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main-container" id="main-cotainer">
+    <div class="main-container" id="main-container">
         <main class="internal">
             <div class="value">
             <h1 class="heading">Want to learn javascript faster</h1>
